metadata/force-app/main/default/objects/CustomName_YBQxa__c/CustomName_YBQxa__c.object-meta.xml
<CustomObject>
    <description>Description_ryNIF</description>
    <label>CustomLabel_DKIPN</label>
    <nameField>
        <label>CustomLabel_DKIPN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_DKIPNs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>