metadata/force-app/main/default/objects/CustomName_YBQxa__c/fields/CustomField_nwrks__c.field-meta.xml
<CustomField>
    <fullName>CustomField_nwrks__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldVSxnr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>