metadata/force-app/main/default/objects/CustomName_YBQxa__c/fields/CustomField_olsMg__c.field-meta.xml
<CustomField>
    <fullName>CustomField_olsMg__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldEfPUY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>